--- a/package.json
+++ b/package.json
@@ -3,9 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.2",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.1.2",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.4.0",
+    "core-js": "^3.1.4",
+    "history": "^4.9.0",
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.2",
+    "superagent": "^5.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
+    "prettier": "^1.15.3",
+    "prettier-eslint": "^8.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
