--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-course",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=10.13"
+  },
   "resolutions": {
     "handlebars": "4.5.3",
     "serialize-javascript": "2.1.1"
