--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,6 @@ jobs:
 
     - name: yarn install
       run: cd final-version && yarn
+
+    - name: Lint
+      run: cd final-version && yarn lint
