--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,11 @@
   "settings": {
     "react": {
       "pragma": "React",
-      "version": "16.7"
+      "version": "16.11"
     }
   },
   "rules": {
+    "prettier/prettier": "error",
     "object-curly-newline": "off",
     "object-curly-spacing": ["error", "always"],
     "global-require": "off",
