--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ on:
       - '**.md'
 
 jobs:
-
   build:
     name: Build
 
@@ -22,16 +21,19 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Set Node.js 12.x
-      uses: actions/setup-node@master
-      with:
-        node-version: 12.x
+      - name: Set Node.js 12.x
+        uses: actions/setup-node@master
+        with:
+          node-version: 12.x
 
-    - name: Yarn CLI
-      uses: CultureHQ/actions-yarn@v1.0.1
+      - name: Yarn CLI
+        uses: CultureHQ/actions-yarn@v1.0.1
 
-    - name: yarn install
-      run: cd final-version && yarn
+      - name: yarn install
+        run: yarn
+
+      - name: Lint
+        run: yarn lint
