--- a/package.json
+++ b/package.json
@@ -87,11 +87,14 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "start:demo": "node scripts/start.js final-version",
+    "ex": "APP_EXERCISE=true node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "test": "node scripts/test.js ",
+    "test:config": "NODE_ENV=test jest --config=config/jest/config.js",
     "lint": "eslint --cache '**/src/**.*.js'",
-    "format": "prettier-eslint --write **src/**/*.js",
-    "format:dry": "prettier-eslint --write **src/**/*.js --dry-run"
+    "format": "prettier-eslint --write '**src/**/*.js'",
+    "format:dry": "prettier-eslint --write '**src/**/*.js' --dry-run"
   },
   "browserslist": {
     "production": [
