--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "test:config": "NODE_ENV=test jest --config=config/jest/config.js",
     "lint": "eslint --cache '**/src/**.*.js'",
     "format": "prettier-eslint --write '**/src/**/*.js'",
-    "format:dry": "prettier-eslint '**/src/**/*.js'"
+    "format:dry": "prettier-eslint \"**/src/**/*.js\""
   },
   "browserslist": {
     "production": [
