--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "serialize-javascript": "2.1.1"
   },
   "dependencies": {
-    "@babel/core": "7.6.0",
-    "@babel/plugin-transform-react-jsx": "^7.7.7",
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.1.2",
+    "classnames": "^2.2.6",
+    "core-js": "^3.1.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.0.1",
+    "regenerator-runtime": "^0.13.2",
+    "styled-components": "^4.4.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.7.7",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -25,11 +36,12 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "classnames": "^2.2.6",
-    "core-js": "^3.1.4",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^6.1.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
@@ -46,6 +58,8 @@
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-environment-jsdom-global": "^1.2.0",
+    "jest-enzyme": "^7.1.2",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
@@ -58,19 +72,13 @@
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.11.0",
+    "prettier-eslint-cli": "^5.0.0",
     "react-app-polyfill": "^1.0.4",
-    "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.11.0",
-    "react-router-dom": "^5.0.1",
-    "regenerator-runtime": "^0.13.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "styled-components": "^4.4.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
@@ -79,22 +87,14 @@
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
   },
-  "devDependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.4",
-    "prettier-eslint-cli": "^5.0.0"
-  },
   "scripts": {
     "start": "node scripts/start.js",
     "start:demo": "node scripts/start.js final-version",
     "ex": "APP_EXERCISE=true node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js ",
-    "test:config": "NODE_ENV=test jest --config=config/jest/config.js",
+    "test": "NODE_ENV=test jest --config=config/jest/config.js",
     "lint": "eslint --cache '**/src/**.*.js'",
-    "format": "prettier-eslint --write '**/src/**/*.js'",
-    "format:dry": "prettier-eslint \"**/src/**/*.js\""
+    "format": "prettier-eslint --write '**/src/**/*.js'"
   },
   "browserslist": {
     "production": [
