--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
   "settings": {
     "react": {
       "pragma": "React",
-      "version": "16.11"
+      "version": "detect"
     }
   },
   "rules": {
