--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "build": "node scripts/build.js",
     "test": "NODE_ENV=test jest --config=config/jest/config.js",
     "lint": "eslint --cache '**/src/**/*.js'",
-    "format": "prettier-eslint --write $PWD/'**/src/**/*.js'"
+    "format": "prettier-eslint --write $PWD/'**/src/**/*.{js, json}'"
   },
   "browserslist": {
     "production": [
