--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "serialize-javascript": "2.1.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.1.2",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.1.2",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.2",
     "classnames": "^2.2.6",
-    "core-js": "^3.1.4",
+    "connected-react-router": "^6.8.0",
+    "core-js": "^3.8.1",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-router-dom": "^5.0.1",
-    "regenerator-runtime": "^0.13.2",
-    "styled-components": "^4.4.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.6.0",
