--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-syntax-highlighter": "^15.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.7",
-    "styled-components": "^5.2.1"
+    "remark-code-blocks": "^2.0.1",
+    "remark-gfm": "^1.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-stringify": "^9.0.1",
+    "styled-components": "^5.2.1",
+    "to-vfile": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.0",
