--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=10.11"
+    "node": ">=10.11",
+    "yarn": ">=1.20"
   },
   "resolutions": {
     "handlebars": "4.5.3"
@@ -71,6 +72,7 @@
     "jest-enzyme": "^7.1.2",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
+    "markdown-index-generator": "^1.0.1",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -93,7 +95,7 @@
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1",
+    "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.1.1"
   },
   "scripts": {
