feat(readme): add emoji support

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.8.1",
+    "emoji-dictionary": "^1.0.11",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
