--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "jest-enzyme": "^7.1.2",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
-    "markdown-index-generator": "^1.0.1",
+    "markdown-toc": "1.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
