--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
     "build": "node scripts/build.js",
     "test": "NODE_ENV=test jest --config=config/jest/config.js",
     "lint": "eslint --cache '**/src/**/*.js'",
-    "format": "prettier-eslint --write $PWD/'**/src/**/*.{js, json}'"
+    "format": "prettier-eslint --write $PWD/'**/src/**/*.{js, json}'",
+    "solution": "node scripts/solution.js"
   },
   "browserslist": {
     "production": [
