--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "test": "NODE_ENV=test jest --config=config/jest/config.js",
     "lint": "eslint --cache '**/src/**/*.js'",
     "format": "prettier-eslint --write $PWD/'**/src/**/*.{js, json}'",
-    "solution": "node scripts/solution.js"
+    "solution": "node scripts/solution.js",
+    "gen-toc": "yarn markdown-toc --bullets=\"-\" --no-firsth1 README.md | pbcopy"
   },
   "browserslist": {
     "production": [
