--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "yarn": ">=1.20"
   },
   "resolutions": {
-    "handlebars": "4.5.3"
+    "handlebars": "4.5.3",
+    "immer": "8.0.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
