--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0",
     "react-app-polyfill": "^1.0.4",
-    "react-dev-utils": "^11.0.4",
+    "react-dev-utils": "9",
     "resolve": "1.12.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "7.2.0",
