--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "yarn": ">=1.20"
   },
   "resolutions": {
-    "handlebars": "4.5.3"
+    "handlebars": "4.5.3",
+    "immer": "8.0.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -86,7 +87,7 @@
     "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0",
     "react-app-polyfill": "^1.0.4",
-    "react-dev-utils": "^11.0.4",
+    "react-dev-utils": "9",
     "resolve": "1.12.0",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "7.2.0",
